--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,22 @@
+/*Google fonts import*/
+@import url('https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+
+
 /* Asterisk wildcard selector to override default styles added by the browser*/
 * {
     padding: 0%;
     margin:0;
     box-sizing: border-box;
 }
-/* Genberal Styles */
+/* General Styles */
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column; 
     /*Generic project syyles*/
     color: #3a3a3a;
+    font-family: 'Lato', sans-serif; 
 }
 
 /* Header*/
