--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ nav {
 }
 
 .nav-toggle-label {
-    font-size: 2rem;
+    font-size: 2rem;-
 }
 /* Main content */
 main {
@@ -91,4 +91,23 @@ main {
 /* Footer */
 footer {
     background-color: orange;
+}
+
+/* Media query: Tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+       /* Header */
+       nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+       }     
+       #menu {
+        display: flex;
+       }
+       .nav-toggle-label
+       {
+        display:none;
+       }
 }
