--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,10 @@ footer {
         margin: top 75px;
     }
 }
-/* Media query: Small Laptops (992px and up) */
-{
 
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
 }
