--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,19 @@ main {
 /* Footer */
 footer {
     background-color: orange;
+ul.horizontal-list {
+    list-style-type:none;
+    margin:0;
+    padding: 0;
+    display: flex;
 }
+ul.horizontal-list li {
+    margin-right:10px;
+}
+
+ 
+}
+  
 
 /* Media query: Tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
