--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,19 +89,17 @@ main {
 }
 
 /* Footer */
-footer {
-    background-color: orange;
-ul.horizontal-list {
-    list-style-type:none;
-    margin:0;
-    padding: 0;
+#social-networks {
+    text-align: center;
+    padding: 20%;
     display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
-ul.horizontal-list li {
-    margin-right:10px;
-}
-
- 
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 }
   
 
